# clion-glfw

./: .gitignore  CMakeLists.txt  main.cpp
